chore: restructure files public/js, modules move to ./js/m/

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,7 +15,7 @@
     </div>
 
     <% if(isLoadInitJS) { %>
-        <script defer type="module" src="/js/keyPair.js"></script>
+        <script defer type="module" src="/js/m/keyPair.js"></script>
         <script defer type="module" src="/js/init.js"></script>
         <% } %>
             <script src="/js/load_animation.js"></script>
