feat: connect websocket, register cat online

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,11 +14,9 @@
         <img src="/img/Kikuri_load.png" alt="Kikuri load" class="load-img">
     </div>
 
-    <% if(isLoadInitJS) { %>
-        <script defer type="module" src="/js/m/keyPair.js"></script>
-        <script defer type="module" src="/js/init.js"></script>
-        <% } %>
-            <script src="/js/load_animation.js"></script>
+    <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
+    <script type="module" src="/js/main.js"></script>
+
 </body>
 
 </html>
