--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,31 +17,40 @@
     </div>
 
     <!-- Sidebar -->
-    <div class="flex h-screen">
+    <div class="flex h-screen text-sm">
         <aside class="w-64 bg-gray-800 p-4 space-y-4 border-r border-gray-700 hidden md:block">
             <!-- Logo -->
-            <div class="text-2xl font-bold text-white mb-6 flex justify-center">🐟Sendfish</div>
+            <div class="text-2xl font-bold text-red-700 mb-6 flex justify-center">🐟Sendfish</div>
 
             <!-- Navigation -->
-            <nav class="space-y-2">
-                <a href="#" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-700">
-                    <svg class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+            <nav class="space-y-2 font-medium">
+                <a id="new-fish" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-700 cursor-pointer">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                        stroke-linecap="round" stroke-linejoin="round"
+                        class="lucide lucide-package-plus-icon lucide-package-plus">
+                        <path d="M16 16h6" />
+                        <path d="M19 13v6" />
                         <path
-                            d="M10 3a1 1 0 00-1 1v3H6a1 1 0 100 2h3v3a1 1 0 102 0V9h3a1 1 0 100-2h-3V4a1 1 0 00-1-1z" />
+                            d="M21 10V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l2-1.14" />
+                        <path d="m7.5 4.27 9 5.15" />
+                        <polyline points="3.29 7 12 12 20.71 7" />
+                        <line x1="12" x2="12" y1="22" y2="12" />
                     </svg>
-                    <span>New Fish</span>
+                    <span id="span-new-fish" class="px-2 py-1 w-full">New Fish Basket</span>
                 </a>
-                <a href="#" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-700">
+
+                <a class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-700 cursor-pointer">
                     <svg class="w-5 h-5 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
                         <path d="M4 4h12v12H4z" />
                     </svg>
-                    <span>Waiting Fish</span>
+                    <span class="px-2 py-1 w-full">Waiting Fish</span>
                 </a>
-                <a href="#" class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-700">
+
+                <a class="flex items-center gap-3 px-3 py-2 rounded-lg hover:bg-gray-700 cursor-pointer">
                     <svg class="w-5 h-5 text-blue-400" fill="currentColor" viewBox="0 0 20 20">
                         <path d="M10 2a8 8 0 00-5.29 13.99L4 18l2.01-.71A8 8 0 1010 2z" />
                     </svg>
-                    <span>Fish</span>
+                    <span class="px-2 py-1 w-full">Fish</span>
                 </a>
             </nav>
 
@@ -86,7 +95,7 @@
                     class="w-3/5 mx-auto relative bg-gray-800 rounded-2xl px-4 py-3 pt-4 flex items-end gap-2 shadow-md"
                     id="chat-form">
                     <!-- Textarea -->
-                    <textarea id="message-input" rows="3" placeholder="Nhập tin nhắn..."
+                    <textarea id="message-input" rows="3" placeholder="Enter a fish..."
                         class="flex-1 bg-transparent text-white placeholder-gray-400 resize-none focus:outline-none overflow-y-auto max-h-32 pr-12 custom-scrollbar"></textarea>
 
                     <!-- Button send -->
