feat: add toast

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,10 +11,16 @@
 </head>
 
 <body class="bg-gray-900 text-white font-sans">
+    <!-- Loading screen -->
     <div id="loader" class="bg-gray-900">
         <div class="circle"></div>
         <img src="/img/Kikuri_load.png" alt="Kikuri load" class="load-img">
     </div>
+
+
+    <!-- Error notification -->
+    <div id="toast-container"
+        class="fixed top-5 left-1/2 transform -translate-x-1/2 z-50 flex flex-col items-center space-y-2"></div>
 
     <!-- Sidebar -->
     <div class="flex h-screen text-sm">
