--- a/public/css/load.css
+++ b/public/css/load.css
@@ -56,3 +56,12 @@
     background-color: #2d3541;
     cursor: default;
 }
+
+.welcome-text {
+    padding: 0;
+    font-size: 3rem;
+    font-weight: 700;
+    background: radial-gradient(circle, rgba(238, 174, 202, 1) 13%, rgba(148, 187, 233, 1) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
