feat: focus to message input when start new chat

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -130,7 +130,7 @@
                     class="w-3/5 mx-auto relative bg-gray-800 rounded-2xl px-4 py-3 pt-4 flex items-end gap-2 shadow-md"
                     id="chat-form">
                     <!-- Textarea -->
-                    <textarea id="message-input" rows="3" placeholder="Enter a fish..."
+                    <textarea id="fish-input" rows="3" placeholder="Enter a fish..."
                         class="flex-1 bg-transparent text-white placeholder-gray-400 resize-none focus:outline-none overflow-y-auto max-h-32 pr-12 custom-scrollbar"></textarea>
 
                     <!-- Button send -->
