feat: send message on button

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -133,7 +133,7 @@
                         class="flex-1 bg-transparent text-white placeholder-gray-400 resize-none focus:outline-none overflow-y-auto max-h-32 pr-12 custom-scrollbar"></textarea>
 
                     <!-- Button send -->
-                    <button type="submit"
+                    <button id="send-btn" type="submit"
                         class="bg-gray-700 hover:bg-gray-600 text-white w-9 h-9 rounded-full flex items-center justify-center shadow-sm">
                         <span class="text-lg font-bold">&gt;</span>
                     </button>
