feat: redirect home if 404

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sendfish</title>
-    <link rel="icon" href="/img/sendfish_logo.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/img/sendfish_logo.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <!-- Fixme: shouldn't use cdn -->
-    <link rel="stylesheet" href="/css/load.css">
+    <link rel="stylesheet" href="/assets/css/load.css">
     <style type="text/tailwindcss">
         @layer utilities {
             .fish-left {
@@ -41,7 +41,7 @@
     <!-- Loading screen -->
     <div id="loader" class="bg-gray-900">
         <div class="circle"></div>
-        <img src="/img/Kikuri_load.png" alt="Kikuri load" class="load-img">
+        <img src="/assets/img/Kikuri_load.png" alt="Kikuri load" class="load-img">
     </div>
 
 
@@ -140,7 +140,7 @@
                 </form>
                 <!-- Cat ID -->
                 <div id="cat-id" class="cat-id">
-                    <img src="\img\cat_id.gif" alt="cat gif" class="w-8 h-8" />
+                    <img src="/assets/img/cat_id.gif" alt="cat gif" class="w-8 h-8" />
                     <span>CAT ID: Something wrong!</span>
                 </div>
             </div>
@@ -148,7 +148,7 @@
 
 
         <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
-        <script type="module" src="/js/main.js"></script>
+        <script type="module" src="/assets/js/main.js"></script>
 
 </body>
 
