feat: load active chat to sidebar

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -98,22 +98,13 @@
                     <ul id="pending-fishes"
                         class="hidden flex flex-col items-center px-3 py-2 rounded-lg max-h-[16dvh] custom-scrollbar">
                         <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                            <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
+                            <a href="#" class=" w-full px-2 py-1 block">sample1111</a>
                         </li>
                         <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                            <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
+                            <a href="#" class=" w-full px-2 py-1 block">sample2222</a>
                         </li>
                         <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                            <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                        </li>
-                        <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                            <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                        </li>
-                        <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                            <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                        </li>
-                        <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                            <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
+                            <a href="#" class=" w-full px-2 py-1 block">sample3333</a>
                         </li>
                     </ul>
                 </div>
@@ -156,79 +147,7 @@
                 <ul id="fish-baskets"
                     class="flex flex-col items-center px-3 pt-2 pb-4 rounded-lg max-h-[78%] custom-scrollbar">
                     <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">AGeNTXA-6M</a>
-                    </li>
-                    <li class="w-full rounded-md hover:bg-gray-700 p-1">
-                        <a href="#" class=" w-full px-2 py-1 block">end-TXA-111</a>
+                        <a href="#" class=" w-full px-2 py-1 block">sample0596</a>
                     </li>
                 </ul>
             </nav>
