refactor: reorganize codebase client by module & MVC
- Moved related logic into separate modules
- Applied MVC separation for each module
- Fix(ui): Added the chat pending list but it was already in the active list

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -88,7 +88,7 @@
                         <span class="px-2 py-1">Pending Fish</span>
 
                         <!-- Badge -->
-                        <span
+                        <span id="pending-badge"
                             class="absolute -right-1 bg-orange-400 w-5 h-5 flex items-center justify-center rounded-full font-medium">
                             3
                         </span>
