style: add title, add copy button, and change color cat id

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -194,7 +194,13 @@
                 <!-- Cat ID -->
                 <div id="cat-id" class="cat-id">
                     <img src="/assets/img/cat_id.gif" alt="cat gif" class="w-8 h-8" />
-                    <span>CAT ID: Something wrong!</span>
+                    <p class="font-medium text-gray-400">[Cat ID]</p>
+                    <span class="font-semibold text-pink-200">Something wrong!</span>
+
+                    <!-- Copy button -->
+                    <button id="copy-cat-id" class="cursor-pointer">
+                        <i class="fa fa-copy"></i>
+                    </button>
                 </div>
             </div>
         </main>
